tests/errors/sem3.kt
fun main(){
    val result = x + 5
}